--- a/laser/laser.ini
+++ b/laser/laser.ini
@@ -1,6 +1,7 @@
 [EMC]
 MACHINE = 		Laser
 DEBUG	=		0
+NML_FILE = 		emc.nml
 VERSION = 		1.0
 
 [DISPLAY]
@@ -14,7 +15,7 @@ DEFAULT_LINEAR_VELOCITY = 5
 MAX_FEED_OVERRIDE = 	1.5
 PROGRAM_PREFIX = 	/home/cnc/linuxcnc/nc_files
 INTRO_GRAPHIC = 	linuxcnc.gif
-INTRO_TIME = 		5
+INTRO_TIME = 		2
 GEOMETRY = 		XYY
 #PYVCP = 		laser.xml
 
@@ -39,12 +40,15 @@ PARAMETER_FILE =        hm2-stepper.var
 EMCMOT =                motmod
 COMM_TIMEOUT =          1.0
 COMM_WAIT =             0.010
-SERVO_PERIOD =          1000000
+SERVO_PERIOD =          200000
 
 [LASER]
 PULSE_THREAD_DURATION  =  50000
 PULSED_CUT_DURATION  =  0.0025
 PULSED_CUT_CONTINUOUS = 0.00005
+
+[RASTER]
+IMAGE_PATH = 		/home/cnc/linuxcnc/nc_files/raster_images
 
 [HAL]
 HALFILE =               laser.hal
