volatile homing enabled.  This causes the machine to lose its home refs (and therefore fall out of teleop mode) when machine is disabled (F2 or estop/F1).  This is important because my gantry tends to rest out of square, and homing pulls it physically into square.  When disabling the machine, the drives are disabled, the motors go slack, and the gantry pops back out of square, losing home.

--- a/laser/laser.ini
+++ b/laser/laser.ini
@@ -86,6 +86,7 @@ MAX_VELOCITY =          20
 MAX_ACCELERATION =      100
 FERROR =                0.050
 MIN_FERROR =            0.005
+VOLATILE_HOME = 	1
 HOME =                  0.000
 HOME_SEQUENCE =         0
 HOME_OFFSET =           0.000
@@ -122,6 +123,8 @@ MAX_VELOCITY =          10
 MAX_ACCELERATION =      50
 FERROR =                0.050
 MIN_FERROR =            0.005
+VOLATILE_HOME = 	1
+HOME =                  0.000
 HOME =                  0.000
 HOME_SEQUENCE =         1
 HOME_OFFSET =           0.000
@@ -150,6 +153,8 @@ MAX_VELOCITY =          10
 MAX_ACCELERATION =      50
 FERROR =                0.050
 MIN_FERROR =            0.005
+VOLATILE_HOME = 	1
+HOME =                  0.000
 HOME =                  0.000
 HOME_SEQUENCE = 1
 HOME_OFFSET =           0.080
