[DISPLAY]GEOMETRY was set to XYY as per examples.  This setting drives the axis backplot, and using YY means it doubles the Y dimensions in the display.

--- a/laser/laser.ini
+++ b/laser/laser.ini
@@ -16,7 +16,7 @@ MAX_FEED_OVERRIDE = 	1.5
 PROGRAM_PREFIX = 	/home/cnc/linuxcnc/nc_files
 INTRO_GRAPHIC = 	linuxcnc.gif
 INTRO_TIME = 		2
-GEOMETRY = 		XYY
+GEOMETRY = 		XY
 #PYVCP = 		laser.xml
 
 [FILTER]
