set startup gcode, mostly to default spindle speed to 5000 ppi

--- a/laser/laser.ini
+++ b/laser/laser.ini
@@ -35,6 +35,7 @@ CYCLE_TIME =            0.010
 
 [RS274NGC]
 PARAMETER_FILE =        hm2-stepper.var
+RS274NGC_STARTUP_CODE = G80 G17 G40 G20 G90 G91.1 G94 G54 G49 G99 G97 G64 P0.001 M5 M0 F10 S5000
 
 [EMCMOT]
 EMCMOT =                motmod
